k8s/delivery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: ghcr.io/kun99/p4/delivery:latest
      imagePullSecrets:
        - name: p2secret
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
